# hud_cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: COVERAGE.md  PLAN.md
examples/: README.md  slow_test_files_large_sample.json  slow_test_files_plot.py  slow_test_files_sample.json  slow_test_files_with_counts.sql
hud/: __main__.py  auth.py  cli.py  client.py  gcx.py  logs.py  models.py  queries.py
skills/hud-cli/: SKILL.md
tests/: test_auth.py  test_cli.py  test_client.py  test_gcx.py
