[project]
name = "pytorch-hud-cli"
version = "0.1.0"
description = "CLI for PyTorch HUD and ClickHouse CI data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.7.4",
    "platformdirs>=4.0",
    "rich>=13.7",
    "typer>=0.15",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = ["pytorch-hud-cli[test]", "ruff>=0.8"]

[project.scripts]
hud = "hud.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hud"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
